# src/models/login.model.ts
@@ -1,4 +1,0 @@
-export interface Login {
-    mobileNumber: string;
-    password: string;
-}
