# src/models/user.model.ts
@@ -1,15 +1,0 @@
-
-export interface User {
-    id: BigInteger;
-    userName: string;
-    emailAddress: string;
-    mobileNumber: string;
-    password: string;
-    confirmPassword: string;
-}
-
-export interface Sale {
-    id: BigInteger;
-    from: Date
-    to: Date
-}
